# No-LLMit

./: .gitignore  DEPLOY.md  README.md
.github/: FUNDING.yml
cortex/: pyproject.toml
engine/: Dockerfile  go.mod  go.sum  main.go
engine/api/: game_handlers.go  llm_handlers.go  messages.go  server.go
engine/client/: llm.go
engine/game/: action.go  card.go  deck.go  doc.go  game.go  hand.go  llm.go  player.go  pot.go
llm/: .gitignore  Dockerfile  README.md  __init__.py  app.py  prompt.py  prompts.py  pyproject.toml  registry.py  requirements.txt  schemas.py  usage.py
llm/providers/: huggingface.py
web/: SKINS.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/play/: page.tsx
web/src/components/: ActionPanel.tsx  Card.tsx  CornerBorders.tsx  GameHeader.tsx  LLMLogo.tsx  Player.tsx  PokerTable.tsx  ReasoningPanel.tsx  TableFelt.tsx  TypewriterText.tsx  UsageIndicator.tsx  WinningsPanel.tsx
web/src/hooks/: useGameState.ts
web/src/lib/: api.ts  constants.ts  timing.ts
